chore(awt): cleanup
its honestly some of the worst code (Apache), and that's coming from me.